# rusty-repo-remover

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: config.toml.example
src/: main.rs
