[package]
name = "rusty-repo-remover"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
clap = { version = "4.5.18", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"